feat: playlist management support (#514)
* add playlist nav page

* create model and service for persistent playlist

rename

* implement base viewmodel

* fix playlistservice

* fix more issues

wip: temp fix PlaylistsPageViewModel

* fix PlaylistService

* create PlaylistViewModel

* Connect playlists page with view models

* wip: create playlist dialog

* support json read and write

* fix XAML files

* fix create playlists dialog style

* using FileIO to write JSON to file

* feat: add PlaylistDetailsPage

* use FileIO to read json from file

* save files to playlist

* move save method into PlaylistViewModel

* rename and delete playlist

* directly bind details page to PlaylistViewModel

* load playlists in the MainPageViewModel

* Add to playlist sub (SongsPage)

* refine playlist grid view to show items count

* create CreatePlaylistCommand to combine dialog and VM logic

* refine AddToPlaylistFlyoutSubmenuBehavior and delete CreatePlaylistCommand

* add "add to playlist" submenu to all relevant pages

* minor clean up

* handle duplicated items in PlaylistViewModel

* localize CreatePlaylistDialog

* more localization

* use commands instead of onclick handlers for playlist rename and delete

* Undo resources VS lint

* add new icon, access key and shortcut to playlist nav item

* add context flyout menu items

* better playlist load error handling

* mark not media not parsable unavailable

* remove subtitle on playlist details page
playlist details doesnt need subtitle. adjust button row animation offset as well

* handle command execution on empty playlists

* adjust some dynamic padding

---------

Co-authored-by: United600 <United600@users.noreply.github.com>

--- a/Screenbox/Strings/en-US/KeyboardResources.resw
+++ b/Screenbox/Strings/en-US/KeyboardResources.resw
@@ -385,6 +385,10 @@
     <value>NQ</value>
     <comment>{Range="A-Z"}{Limit=2}Access key for the play queue page. For the initial key, avoid collision with any other Player or the first Command and TopNavigation key. The second key must be unique with respect to every other Navigation key in this file.</comment>
   </data>
+  <data name="NavigationItemPlaylistKey" xml:space="preserve">
+    <value>NP</value>
+    <comment>{Range="A-Z"}{Limit=2}Access key for the playlist page. For the initial key, avoid collision with any other Player or the first Command and TopNavigation key. The second key must be unique with respect to every other Navigation key in this file.</comment>
+  </data>
   <data name="NavigationItemSettingsKey" xml:space="preserve">
     <value>NS</value>
     <comment>{Range="A-Z"}{Limit=2}Access key for the settings page. For the initial key, avoid collision with any other Player or the first Command and TopNavigation key. The second key must be unique with respect to every other Navigation key in this file.</comment>
